app/assets/stylesheets/users/dashboard.css.scss
.dashboard {
  margin-top: 20px;
  overflow: hidden;

  .dashboard-content {
    float: left;
    width: 640px;

    .user-box {
      overflow: hidden;

      img {
        width: 100px;
        float: left;
        margin-right: 20px;
      }

      h4.welcome {
        font-size: 12px;
        color: #aaa;
        margin: 20px 0 0 0;
      }

      h1.username {
        font-size: 24px;
        margin: 0;
      }

    }

    .mood-box {
      background: #f3f3f3;
      border: 3px solid #b4bdc4;
      border-radius: 2px;
      padding: 20px;
      margin: 20px 0;
      width: 430px;

      header p {
        font-size: 18px;
        color: #9a9a9a;
        font-weight: normal;
      }

      .moods {
        overflow: hidden;

        a {
          display: block;
          float: left;
          margin-right: 20px;
          border: 2px solid #b4bdc4;
          border-radius: 2px;

          &:last-child {
            margin-right: 0;
          }

          img {
            width: 125px;
          }
        }
      }
    }

    .carousel {
      width: 620px;
      border: 3px solid #b4bdc4;

      .carousel-control {
        top: 50%;
      }
    }
  }

  .dashboard-posts {
    float: left;
    width: 280px;

    .post {
      padding: 10px;
      overflow: hidden;

      &:hover {
        background: #dfdfdf;
      }

      .image {
        float: left;
        box-shadow: 0 0 3px #666;
        width: 90px;
        height: 45px;
        margin-right: 15px;
      }

      .content {
        float: left;
        width: 150px;

        h2 {
          font-size: 14px;
          line-height: 1.4;
          font-weight: bold;
          margin: 3px 0;

          a {
            color: #000;
            &:hover { text-decoration: none; }
          }
        }

        .text { display: none; }
        .tag { display: none; }

      }
    }
  }
}

